kubernetes/back_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: notes-app-backend
  namespace: notes-app-ns
  labels:
    app: notes-app-backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app-backend

  template:
    metadata:
      name: notes-app-backend
      labels:
        app: notes-app-backend

    spec:
      restartPolicy: Always
      containers:
        - name: notes-app-backend-container
          image: harshal345/notes-app_backend
          ports:
            - containerPort: 8000
