kubernetes/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: notes-app-ingress
  namespace: notes-app-ns

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: notes-app-backend-service
                port:
                  number: 8000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: notes-app-frontend-service
                port:
                  number: 5173
